--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ owner:
   email: laderast@ohsu.edu
   # Do not include the @ symbol in your Twitter username
   twitter: laderast
-  linkedin: #username
-  github: laderast
+  linkedin: mutinghuang
+  github: alex31425
   orcid: # ID Number (ex. 0000-0000-0000-0000)
   researchgate: #username
   mendeley: #username
