--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 
 title: Mu-Ting Huang
 locale: en_US
-logo: Pphoto # filename of a logo image that has been placed into your images directory
+logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Ted Laderas
-  avatar: bio-photo.jpg
+  avatar: Pphoto.png
   bio: "This is a sample Jekyll academic website."
   email: mhuang7447@sdsu.edu
   # Do not include the @ symbol in your Twitter username
